Convert some fields to private final Add errorsLabel